--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
   <div class="container">
     <h2>Messenger Summarizer</h2>
     <button id="summarizeAll">Summarize All (Scroll Down)</button>
+    <div id="notification" class="notification hidden"></div>
   </div>
   <script src="popup.js"></script>
 </body>
